sshd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sshd-service
spec:
  selector:
    app: sshd-pod
  ports:
    - protocol: TCP
      port: 22
#      targetPort: 22
  type: LoadBalancer
